--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -29,6 +29,11 @@
         {{ form_textarea('message', '', { class: 'form-control' }) }}
     </div>
 
+    <div class="form-group">
+        {{ form_label('agreement', 'Is agreement accepted') }}
+        {{ form_checkbox(is_agreement_accepted, true, true) }}
+    </div>
+
     {{ form_submit("Send", { class: 'btn btn-primary' }) }}
 
 {{ form_close() }}
